--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,11 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 = form_tag movies_path, :method => :get do
-  Include:
+  Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, @ratings.include?(rating)
+    = check_box_tag "ratings[#{rating}]", 1, (true if @ratings[rating])
   = submit_tag 'Refresh', :id=>"ratings_submit"
-
 
 %table#movies
   %thead
