--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, (true if @ratings[rating])
+    = check_box_tag "ratings[#{rating}]", 1, @ratings[rating] != nil ? true : false
   = submit_tag 'Refresh', :id=>"ratings_submit"
 
 %table#movies
